2009-03-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/xmltest/associatorNames.OK test/xmltest/enumerateQualifiers.OK
	  test/xmltest/getQualifier.OK:
	Fixed tests for [ 2591758 ] EOF Exception when running DefineSystem

2009-03-12  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	Fixed [ 2591758 ] EOF Exception when running DefineSystem

2009-03-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* brokerUpc.c, cimXmlRequest.c, providerDrv.c, support.c, support.h:
	Fixed [ 2646746 ] SFCB crashes if provider MI factory functions 
	return NULL
	(based on patch from J. Bart Whitely)
	
2009-03-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* mofpp.c:
	Fixed [ 2559054 ] sfcb: sfcbmofpp doesn't recognize "//" comments
	(patch by Tyrel Datwyler)

2009-03-06  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	Fixed [ 2669147 ] Incorrect pointer assignment in providerRegister
	(found by Gnanasekar)

	* httpAdapter.c, dbpAdapter.c:
	Fixed [ 2669283 ] httpProcSem incorrectly initialized
	(found by Gnanasekar)
	
2009-03-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlOps.y:
	Fixed [ 2663804 ] sfcb can segfault while parsing large arrays

2009-03-05 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* brokerUpc.c:
	Fixed [ 2155441 ] need support for associators/references upcalls

2009-03-03 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am:
	Fixed [ 2615815 ] clean target is not able to clean code coverage reports.
	(based on patch from Surendra kodali)

2009-03-03 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerDrv.c:
	Fixed [ 2658399 ] Crash in providerDrv.c with NULL indicationMI
	(patch from J. Bart Whiteley)

2009-02-28  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	Fixed [ 2649381 ] Unused fucntion definition in cimcClientSfcbLocal

2009-02-26 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* mofpp.c: