@@ -13,6 +13,7 @@ Bugs fixed:
 - 2559054 sfcb: sfcbmofpp doesn't recognize "//" comments
 - 2646746 SFCB crashes if provider MI factory functions return NULL
 - 2591758 EOF Exception when running DefineSystem
+- 2688353 Unnecessary condition in providerMgr.c
 
 Changes in 1.3.3
 ================
